--- a/app/package.json
+++ b/app/package.json
@@ -11,14 +11,24 @@
   "dependencies": {
     "@noir-lang/backend_barretenberg": "^0.27.0",
     "@noir-lang/noir_js": "^0.27.0",
+    "@privy-io/react-auth": "^1.60.7",
+    "@privy-io/wagmi": "^0.2.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-query": "^5.32.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "i": "^0.3.7",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
+    "npm": "^10.6.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.9.28",
+    "wagmi": "^2.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
