--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,8 @@
     "@noir-lang/noir_js": "^0.27.0",
     "@privy-io/react-auth": "^1.60.7",
     "@privy-io/wagmi": "^0.2.3",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.32.0",
